# korpuskulum

./: .gitignore  README.md  pyproject.toml  pytest.ini
.github/workflows/: python-package.yml
korpuskulum/: __init__.py  config.py  eval.py  evaluate.py  io.py  main.py  objects.py  plotting.py
src/korpus/: io.py
tests/: test_io.py
