[project]
name = "korpuskulum"
version = "0.1.0"
description = "Package to evaluate particle distribution with respect to segmented membranes"
authors = [
    {name = "Neville B.-y. Yee"}
]
license = {text = "Apache License V.3"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "tifffile (>=2025.2.18,<2026.0.0)",
    "numpy",
    "scipy",
    "scikit-learn",
    "matplotlib",
    "tqdm"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
